apps/monitoring/victoriametrics/components/istio/istio-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: victoriametrics
spec:
  hosts:
    - victoriametrics
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: victoriametrics
            port:
              number: 80
